<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_list_item_side"
    android:layout_marginRight="@dimen/margin_list_item_side"
    android:layout_marginTop="@dimen/list_item_top_margin"
    app:cardCornerRadius="@dimen/list_item_card_cornor_radius">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_first_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_to_card_edge"
            android:layout_marginStart="@dimen/margin_to_card_edge"
            android:background="@drawable/shape_round"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_circular_name"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_to_card_edge"
            android:layout_marginStart="@dimen/margin_to_card_edge"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            android:text="@string/ph_name"
            app:layout_constraintStart_toEndOf="@+id/textView_first_letter"
            app:layout_constraintTop_toTopOf="@+id/textView_first_letter"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView_address_and_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ph_address"
            app:layout_constraintStart_toStartOf="@+id/textView_user_name"
            app:layout_constraintTop_toBottomOf="@+id/textView_user_name" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/margin_to_card_edge"
            android:layout_marginLeft="@dimen/margin_to_card_edge"
            android:layout_marginRight="@dimen/margin_to_card_edge"
            android:layout_marginStart="@dimen/margin_to_card_edge"
            android:layout_marginTop="@dimen/margin_divider_name"
            app:layout_constraintBottom_toTopOf="@+id/textView_post_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_first_letter"
            app:srcCompat="@color/gainsboro" />

        <TextView
            android:id="@+id/textView_post_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_to_card_edge"
            android:layout_marginLeft="@dimen/margin_to_card_edge"
            android:layout_marginRight="@dimen/margin_to_card_edge"
            android:layout_marginStart="@dimen/margin_to_card_edge"
            android:layout_marginTop="@dimen/margin_normal_text"
            android:text="@string/ph_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView_post_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_to_card_edge"
            android:layout_marginLeft="@dimen/margin_to_card_edge"
            android:layout_marginRight="@dimen/margin_to_card_edge"
            android:layout_marginStart="@dimen/margin_to_card_edge"
            android:layout_marginTop="@dimen/margin_normal_text"
            android:background="@color/gainsboro"
            android:padding="@dimen/padding_text_body"
            android:text="@string/ph_body"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_post_title" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/margin_to_card_edge"
            android:layout_marginLeft="@dimen/margin_to_card_edge"
            android:layout_marginRight="@dimen/margin_to_card_edge"
            android:layout_marginStart="@dimen/margin_to_card_edge"
            android:layout_marginTop="@dimen/margin_divider_name_bottom"
            app:layout_constraintBottom_toTopOf="@+id/textView_comment_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_post_body"
            app:srcCompat="@color/gainsboro" />

        <TextView
            android:id="@+id/textView_comment_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/padding_icon_font"
            android:layout_marginBottom="@dimen/margin_to_card_edge_with_padding"
            android:text="@string/icon_comment"
            android:textSize="@dimen/text_size_icon_font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>

